--- a/Assignments/Manyam_GroceryApp/Manyam_GroceryApp/Base.lproj/Main.storyboard
+++ b/Assignments/Manyam_GroceryApp/Manyam_GroceryApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k9l-V9-IDB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k9l-V9-IDB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,7 +28,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="vCo-WW-epH" kind="show" identifier="itemCell" customClass="itemSegue" id="z1Q-4K-iEe"/>
+                                            <segue destination="vCo-WW-epH" kind="show" identifier="itemSegue" id="z1Q-4K-iEe"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -64,13 +64,16 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="K08-mO-qqP">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemCell" id="K08-mO-qqP">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K08-mO-qqP" id="QWS-WY-GQb">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="E3q-0Y-wD0" kind="show" identifier="itemInfoSegue" id="QbA-OT-kXw"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -86,7 +89,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="UtE-Iq-4Yv"/>
                     <connections>
-                        <outlet property="groceryItemsTableView" destination="SkH-ca-Kb7" id="Fb4-hY-gCF"/>
+                        <outlet property="groceryItemsTableView" destination="SkH-ca-Kb7" id="0Li-gG-dlX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ry-CZ-1W6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -102,7 +105,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s3O-U4-RGW">
-                                <rect key="frame" x="160" y="314" width="94" height="31"/>
+                                <rect key="frame" x="160" y="358" width="67" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="133" id="7ml-Or-68G"/>
                                     <constraint firstAttribute="height" constant="31" id="HAS-19-isa"/>
@@ -111,7 +114,7 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4ya-w0-moE">
-                                <rect key="frame" x="30" y="405" width="354" height="150"/>
+                                <rect key="frame" x="30" y="449" width="327" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="O1e-Rp-W4z"/>
@@ -122,7 +125,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jkV-OB-k2v">
-                                <rect key="frame" x="10" y="64" width="394" height="200"/>
+                                <rect key="frame" x="10" y="108" width="367" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="350" id="HPf-rz-rFz"/>
                                     <constraint firstAttribute="height" constant="200" id="mX0-cj-rsg"/>
@@ -143,6 +146,7 @@
                             <constraint firstItem="jkV-OB-k2v" firstAttribute="top" secondItem="buF-O2-jF3" secondAttribute="top" constant="20" id="yGH-09-OUd"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="tEh-o3-kKz"/>
                     <connections>
                         <outlet property="itemImageViewOutlet" destination="jkV-OB-k2v" id="5c3-bP-diy"/>
                         <outlet property="itemInfoOutlet" destination="4ya-w0-moE" id="3Gn-Ez-oxq"/>
